# ubiquitous-alchemy

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Catalog.md  LICENSE  Makefile  README.md
bak/: README.md
bak/ubiquitous-auth-server/: .env.template  README.md
bak/ubiquitous-data-server/: Makefile
bak/ubiquitous-viz-server/: Cargo.toml  Makefile  README.md
dev/: Makefile  README.md  dev.env
docker/: README.md
docker-app/asset-management/: Dockerfile  cache.sh  docker-compose.yml  setup.sh  start.sh
docker-app/auth/: Dockerfile  docker-compose.yml  setup.sh  start.sh
docker-app/biz-api/: restart.sh  setup.sh  start.sh
docker-app/biz-api-v1/: start.sh
docker-app/biz-auth/: docker-compose.yaml  setup.sh  start.sh
docker-app/biz-base-v1/: setup.sh
docker-app/biz-db/: .env
docker-app/biz-gateway/: docker-compose.yaml  setup.sh
docker-app/py-api/: setup.sh  start.sh
docker-app/py-base/: setup.sh
docker-app/resource-centre/: Dockerfile  docker-compose.yml  setup.sh  start.sh
docker-app/web-app/: Dockerfile.backend  README.md  build-backend.sh  build-frontend.sh  docker-compose.yml  start.sh
docker-app/web-base/: README.md  setup.sh
docker-base/java/: Dockerfile  pull-maven.sh  setup.sh
docker-base/maven/: Dockerfile  pull-java.sh  setup.sh
docker-base/nodejs/: setup.sh
docker-base/py/: setup.sh
docker-base/rust/: setup.sh
docker/docker-api-gateway/: Dockerfile  docker-compose.yaml  start.sh
docker/docker-auth-server/: Dockerfile  docker-compose.yaml  setup.sh  start.sh
docker/docker-go/: setup.sh
docker/docker-rust/: Dockerfile
documentation/: Documentatiaon-En.md  Documentation.md  project_structure.drawio
example/: Cargo.toml
notes/: Documentatiaon-En.md  portfolio.drawio
notes/draw/: framework.drawio
resources/: .gitignore  Makefile  README.md  auth.template.env  docker.web.env  gateway.template.env  go.env  go.template.env  java.env  lura.env  nodejs.env  rust.env  secret.template.env  web.env
resources/asset-management/: application.properties  log4j2.properties
resources/auth-service/: application.properties  cas.template.properties  init.template.yml  persistence.template.properties
resources/resource-centre/: application.properties  persistence.template.yml
server-go/: main.go
server-nodejs/: .gitignore  README.md  app.module.ts  config.ts  main.ts  package.json  utils.ts
server-nodejs/collection/: database.controller.ts  fileManager.middleware.ts  misc.controller.ts  upload.controller.ts
server-py/: requirements.txt  wsgi.py
server-web/: README.md  main.go
ubiquitous-alchemy-server/: .env.template  Cargo.toml  README.md
ubiquitous-api-gateway/: .gitignore  .template.env  Makefile  README.md  go.mod  go.sum  lura.env  lura.json  main.go
ubiquitous-asset-management/: .gitignore  Makefile  README.md  pom.xml
ubiquitous-auth/: .gitignore  Makefile  pom.xml
ubiquitous-auth-server/: .env.template  Cargo.toml  README.md
ubiquitous-auth-server/src/: constant.rs  error.rs  lib.rs  main.rs
ubiquitous-auth-server/src/handler/: auth.rs  invitation.rs  mod.rs  register.rs
ubiquitous-auth-server/src/model/: invitation.rs  mod.rs  user.rs
ubiquitous-auth-server/src/service/: email.rs  email_service.rs  encryption.rs  mod.rs  persistence.rs  persistence_service.rs
ubiquitous-auth-server/src/util/: email_helper.rs  encryption.rs  insecure_email_helper.rs  mod.rs
ubiquitous-biz-server/: .env.template  Makefile  README.md  go.mod  go.sum
ubiquitous-data-server/: .env.template  README.md
ubiquitous-data-server/ua-application/: Cargo.toml
ubiquitous-data-server/ua-application/src/: error.rs  main.rs
ubiquitous-data-server/ua-application/src/controller/: query.rs
ubiquitous-data-server/ua-application/src/model/: biz_model.rs  persistence.rs
ubiquitous-data-server/ua-persistence/: Cargo.toml
ubiquitous-data-server/ua-persistence/src/: model.rs
ubiquitous-data-server/ua-service/: Cargo.toml
ubiquitous-data-server/ua-service/src/interface/: mod.rs  query.rs
ubiquitous-data-server/ua-service/src/provider/: sea.rs
ubiquitous-data-server/ua-service/src/repository/: schema.rs
ubiquitous-data-server/ua-service/src/util/: general.rs
ubiquitous-fs-server/: Makefile  README.md  go.mod  main.go
ubiquitous-resource-centre/: Makefile  README.md  pom.xml
ubiquitous-tg-server/: README.md
ubiquitous-viz-server/: .env.template  README.md
ubiquitous-viz-server/uv-backend/: Cargo.toml
ubiquitous-viz-server/uv-backend/src/: frontend.rs  main.rs  util.rs
ubiquitous_alchemy/: Cargo.toml
web/: README.md
(+468 files in other folders)
