[package]
name = "ubiquitous-auth-server"
version = "0.1.0"
edition = "2018"


[dependencies]
actix-identity = "0.4.0-beta.1"
actix-web = "4.0.0-beta.8"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.16"
lazy_static = "1.4.0"
lettre = "0.10.0-rc.3"
rbatis = "2.0.20"
ring = "0.16.20"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
