[package]
name = "ubiquitous-auth-server"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"


[dependencies]
actix-identity = "0.4.0-beta.1"
actix-web = "4.0.0-beta.8"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fast_log = "1.3.24"
lazy_static = "1.4.0"
lettre = "0.10.0-rc.3"
log = "0.4.14"
rbatis = { version = "2.0.22", features = ["postgres"] }
ring = "0.16.20"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2.2.0"
