[package]
name = "ubiquitous-auth-server"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"


[dependencies]
actix-identity = "0.4.0-beta.1"
actix-web = "4.0.0-beta.8"
chrono = { version = "0", features = ["serde"] }
dotenv = "0"
env_logger = "0"
fast_log = "1"
lazy_static = "1"
lettre = "0.10.0-rc.3"
log = "0"
rbson = "2"
rbatis = { version = "3", features = ["runtime-async-std-rustls", "postgres"] }
ring = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "0", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2"
