[package]
name = "ua-application"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
dyn-conn = { git = "https://github.com/Jacobbishopxy/rustopia", version = "0.1.0" }
sqlz = { git = "https://github.com/Jacobbishopxy/rustopia", version = "0.1.0" }
ua-service = { path = "../ua-service" }
ua-persistence = { path = "../ua-persistence" }

actix-web = "4.0.0-beta.8"
derive_more = "0.99.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
async-trait = "0.1.50"
uuid = { version = "0.8.2", features = ["v4"] }
