[package]
name = "ua-persistence"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
rbatis = { version = "2.0.22", features = ["postgres"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.2.0"
