[package]
name = "ua-service"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
sqlz = { git = "https://github.com/Jacobbishopxy/rustopia", version = "0.1.0" }

sea-query = { version = "0.12.0", features = ["with-json", "with-chrono", "with-uuid"] }
sqlx = { version = "0.5.5", features = ["any", "postgres", "mysql", "runtime-async-std-rustls"] }
async-trait = "0.1.50"
derive_more = "0.99.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
