[package]
name = "uv-backend"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.2"
